# vocabuilder

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .python-version  Makefile  README.md  backup.html  configuration.html  database.html  development.html  firebase.html  genindex.html  index.html  input.html  installation.html  introduction.html  macos.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  shortcuts.html  source.html  todo.html  tox.ini  usage.html  vocabuilder.py
.github/workflows/: ci.yml  doc_pages.yml
_sources/: backup.rst.txt  configuration.rst.txt  database.rst.txt  development.rst.txt  firebase.rst.txt  index.rst.txt  installation.rst.txt  macos.rst.txt  shortcuts.rst.txt  source.rst.txt  todo.rst.txt  usage.rst.txt
docker/: Dockerfile  build-docker.sh  build_image.sh  entrypoint.sh  run_interactive.sh
docs/: Files.md  SourceCode.md  backup.rst  conf.py  configuration.rst  database.rst  development.rst  firebase.rst  index.rst  input.rst  installation.rst  introduction.rst  macos.rst  shortcuts.rst  source.rst  todo.rst  usage.rst
md_docs/: Files.md  SourceCode.md
src/vocabuilder/: config.py  (+17 more)
tests/: common.py  conftest.py  test_add_window.py  test_app_options.py  test_commandline.py  test_config.py  test_database.py  test_date_mixin.py  test_exceptions.py  test_firebase.py  test_main_func.py  test_main_window.py  test_mixins.py  test_modify_window1.py  test_modify_window2.py  test_select_voca.py  test_test_window.py  test_time_mixin.py  test_view_window.py  test_widgets.py
(+6 files in other folders)
