[tool.poetry]
name = "vocabuilder"
version = "0.1.8"
description = "Vocabulary builder for language learners"
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{include = "vocabuilder", from = "src"}]
license = "MIT"
repository = "https://github.com/hakonhagland/vocabuilder"

[tool.poetry.dependencies]
python = "^3.10"
platformdirs = "^3.8.0"
pyqt6 = "^6.5.1"
configparser = "^5.3.0"
pathlib = "^1.0.1"
gitpython = "^3.1.31"
future = "^0.18.3"
sphinx = "^7.2.5"
sphinx-rtd-theme = {version = "^1.3.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.24.0", optional = true}
firebase-admin = "^6.2.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]

[tool.poetry.scripts]
vocabuilder = "vocabuilder.vocabuilder:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
tox = "^4.6.3"
coverage = {extras = ["toml"], version = "^7.2.7"}
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
pytest-qt = "^4.2.0"
pytest-xvfb = "^3.0.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.coverage.run]
#omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
